[package]
name = "closing_auction"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.5"
crossbeam = "0.8"
mio = "0.8"
metrics = "0.13"
log = "0.4"
env_logger = "0.9"
ordered_float = "3.6"

[dev-dependencies]
criterion = "0.3"